<resources>
    <string name="app_name">MedQueue</string>
    <string name="title_activity_login">MedQueue</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="radioBtnDoc">Doctor</string>
    <string name="radioBtnPat">Patient</string>
    <string name="tvLogInAs">Login Me in as</string>
    <string name="title_activity_doctor">Doctor Panel</string>
    <string name="appointment">Appointments for Today</string>
    <string name="title_activity_patient">Patient Panel</string>
    <string name="delay">Notify all Patient for delay</string>
</resources>
