<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bg_login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.bracu.thesis.medqueue.LoginActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_gravity="center">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint"/>

        <TextView
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvLogInAs"
            android:textColor="@color/white"
            android:layout_marginTop="20dip"
            android:textSize="15dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip">
            <RadioButton
                android:id="@+id/radioBtnDoctor"
                android:background="@null"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:text="@string/radioBtnDoc"/>
            <RadioButton
                android:id="@+id/radioBtnPatient"
                android:background="@null"
                android:layout_width="match_parent"
                android:text="@string/radioBtnPat"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_height="wrap_content" />
        </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:layout_marginTop="20dip"
            android:background="@color/btn_login_bg"
            android:text="@string/btn_login"
            android:textColor="@color/btn_login"/>
    </LinearLayout>
</LinearLayout>